Fix duration buckets overflow (#266)
* Fix duration buckets overflow

* Run tests on x86 and arm

* Overflows in LinearDurationBuckets fixed

* Add more tests for overflow cases

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,10 +10,11 @@ on:
 jobs:
 
   test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         go: ["stable", "oldstable"]
+        os: ["ubuntu-latest", "ubuntu-24.04-arm"]
 
     steps:
     - name: Checkout code
